--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>weather APP</title>
+  <link rel="stylesheet" href="src/style.css">  <title>weather APP</title>
   </head>
   <body>
     <div>
+        <header>
       <input type="search" placeholder="📌Enter a city..." required />
       <input type="submit" value="search" />
-
+</header>
       <div>29°C</div>
       <div>
         humudity: <strong>33%</strong>
@@ -18,6 +19,7 @@
       <div>City, <span>Country</span></div>
       <div>Day, <span>hour</span></div>
     </div>
+  
     <footer>
       This project was coded by <a href="#" target="_blank">Eva Sousa</a> is
       open-sourced on <a href="#" target="_blank">Github</a> and hosted on
