styling the css and more html elements

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div class="weather-app">
+        <header>
       <form class="search-form">
         <input
           type="search"
@@ -22,7 +23,7 @@
           class="write-button"
         />
         <input type="submit" value="search" class="search-botton" />
-      </form>
+      </form></header>
       <div>29°C</div>
       <div>
         Humudity: <strong>33%</strong>
@@ -30,55 +31,56 @@
       </div>
       <div>City, <span>Country</span></div>
       <div>Day, <span>hour</span></div>
+
+      <br />
+      <div class="weather-forecast">
+        <div class="weather-forecast-day">
+          <div class="weather-forecast-date">Monday</div>
+          <img src="#" alt="#" />
+          <div class="weather-forecast-temperatures">
+            <div class="weather-forecast-temperature">8 º</div>
+            <div class="weather-forecast-temperature">4º</div>
+          </div>
+        </div>
+        <div class="weather-forecast-day">
+          <div class="weather-forecast-date">Monday</div>
+          <img src="#" alt="#" />
+          <div class="weather-forecast-temperatures">
+            <div class="weather-forecast-temperature">8 º</div>
+            <div class="weather-forecast-temperature">4º</div>
+          </div>
+        </div>
+        <div class="weather-forecast-day">
+          <div class="weather-forecast-date">Monday</div>
+          <img src="#" alt="#" />
+          <div class="weather-forecast-temperatures">
+            <div class="weather-forecast-temperature">8 º</div>
+            <div class="weather-forecast-temperature">4º</div>
+          </div>
+        </div>
+        <div class="weather-forecast-day">
+          <div class="weather-forecast-date">Monday</div>
+          <img src="#" alt="#" />
+          <div class="weather-forecast-temperatures">
+            <div class="weather-forecast-temperature">8 º</div>
+            <div class="weather-forecast-temperature">4º</div>
+          </div>
+        </div>
+        <div class="weather-forecast-day">
+          <div class="weather-forecast-date">Monday</div>
+          <img src="#" alt="#" />
+          <div class="weather-forecast-temperatures">
+            <div class="weather-forecast-temperature">8 º</div>
+            <div class="weather-forecast-temperature">4º</div>
+          </div>
+        </div>
+      </div>
+      <br />
+      <footer>
+        This project was coded by <a href="#" target="_blank">Eva Sousa</a> is
+        open-sourced on <a href="#" target="_blank">Github</a> and hosted on
+        <a href="#" target="_blank">Netlify</a>
+      </footer>
     </div>
-    <br />
-    <div class="weather-forecast">
-      <div class="weather-forecast-day">
-        <div class="weather-forecast-date">Monday</div>
-        <img src="#" alt="#" />
-        <div class="weather-forecast-temperatures">
-          <div class="weather-forecast-temperature">8 º</div>
-          <div class="weather-forecast-temperature">4º</div>
-        </div>
-      </div>
-      <div class="weather-forecast-day">
-        <div class="weather-forecast-date">Monday</div>
-        <img src="#" alt="#" />
-        <div class="weather-forecast-temperatures">
-          <div class="weather-forecast-temperature">8 º</div>
-          <div class="weather-forecast-temperature">4º</div>
-        </div>
-      </div>
-      <div class="weather-forecast-day">
-        <div class="weather-forecast-date">Monday</div>
-        <img src="#" alt="#" />
-        <div class="weather-forecast-temperatures">
-          <div class="weather-forecast-temperature">8 º</div>
-          <div class="weather-forecast-temperature">4º</div>
-        </div>
-      </div>
-      <div class="weather-forecast-day">
-        <div class="weather-forecast-date">Monday</div>
-        <img src="#" alt="#" />
-        <div class="weather-forecast-temperatures">
-          <div class="weather-forecast-temperature">8 º</div>
-          <div class="weather-forecast-temperature">4º</div>
-        </div>
-      </div>
-      <div class="weather-forecast-day">
-        <div class="weather-forecast-date">Monday</div>
-        <img src="#" alt="#" />
-        <div class="weather-forecast-temperatures">
-          <div class="weather-forecast-temperature">8 º</div>
-          <div class="weather-forecast-temperature">4º</div>
-        </div>
-      </div>
-    </div>
-    <br />
-    <footer>
-      This project was coded by <a href="#" target="_blank">Eva Sousa</a> is
-      open-sourced on <a href="#" target="_blank">Github</a> and hosted on
-      <a href="#" target="_blank">Netlify</a>
-    </footer>
   </body>
 </html>
