--- a/index.html
+++ b/index.html
@@ -14,24 +14,27 @@
   </head>
   <body>
     <div class="weather-app">
-        <header>
-      <form class="search-form">
-        <input
-          type="search"
-          placeholder="📌Enter a city..."
-          required
-          class="write-button"
-        />
-        <input type="submit" value="search" class="search-botton" />
-      </form></header>
-      <div>29°C</div>
-      <div>
-        Humudity: <strong>33%</strong>
-        <span>Wind: <strong>3.3 </strong>km/h</span>
+      <header>
+        <form class="search-form" id="search-form">
+          <input
+            type="search"
+            placeholder="📌Enter a city..."
+            required
+            class="write-button"
+          />
+          <input type="submit" value="search" class="search-botton" />
+        </form>
+      </header>
+      <img src="" alt="weather-image" class="weatherimage" />
+      <div class="current-weather">29°C</div>
+      <div class="extra-info">
+        <div>
+          Humudity: <strong>33%</strong>
+          <span>Wind: <strong>3.3 </strong>km/h</span>
+        </div>
+        <div>City, <span>Country</span></div>
+        <div>Day, <span>hour</span></div>
       </div>
-      <div>City, <span>Country</span></div>
-      <div>Day, <span>hour</span></div>
-
       <br />
       <div class="weather-forecast">
         <div class="weather-forecast-day">
@@ -76,6 +79,7 @@
         </div>
       </div>
       <br />
+      <hr />
       <footer>
         This project was coded by <a href="#" target="_blank">Eva Sousa</a> is
         open-sourced on <a href="#" target="_blank">Github</a> and hosted on
