--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         </form>
       </header>
       <img src="" alt="weather-image" class="weatherimage" />
+      <br />
       <div class="current-weather">29°C</div>
+      <br />
       <div class="extra-info">
         <div>
           Humudity: <strong>33%</strong>
@@ -81,9 +83,9 @@
       <br />
       <hr />
       <footer>
-        This project was coded by <a href="#" target="_blank">Eva Sousa</a> is
-        open-sourced on <a href="#" target="_blank">Github</a> and hosted on
-        <a href="#" target="_blank">Netlify</a>
+        This project was coded by <a href="https://github.com/evasousa23" target="_blank">Eva Sousa 💜 </a> is
+        open-sourced on <a href="https://github.com/evasousa23/my-super-weather-app" target="_blank">Github</a> and hosted on
+        <a href="https://incredible-weather-app.netlify.app/" target="_blank">Netlify</a>
       </footer>
     </div>
   </body>
