add class to the images inside the div(weather-forecast)

--- a/index.html
+++ b/index.html
@@ -25,67 +25,80 @@
           <input type="submit" value="search" class="search-botton" />
         </form>
       </header>
-      <img src="" alt="weather-image" class="weatherimage" />
-      <br />
-      <div class="current-weather">29°C</div>
-      <br />
-      <div class="extra-info">
-        <div>
-          Humudity: <strong>33%</strong>
-          <span>Wind: <strong>3.3 </strong>km/h</span>
+      <main>
+        <img src="" alt="weather-image" class="weather-image" />
+        <br />
+        <div class="current-weather">29°C</div>
+        <br />
+        <div class="extra-info">
+          <div>
+            Humudity: <strong>33%</strong>
+            <span>Wind: <strong>3.3 </strong>km/h</span>
+          </div>
+          <div>City, <span>Country</span></div>
+          <div>Day, <span>hour</span></div>
         </div>
-        <div>City, <span>Country</span></div>
-        <div>Day, <span>hour</span></div>
-      </div>
-      <br />
-      <div class="weather-forecast">
-        <div class="weather-forecast-day">
-          <div class="weather-forecast-date">Monday</div>
-          <img src="#" alt="#" />
-          <div class="weather-forecast-temperatures">
-            <div class="weather-forecast-temperature">8 º</div>
-            <div class="weather-forecast-temperature">4º</div>
+        <br />
+        <div class="weather-forecast">
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Monday</div>
+            <img src="#" alt="#" class="weather-forecast-icon" />
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">8 º</div>
+              <div class="weather-forecast-temperature">4º</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Monday</div>
+            <img src="#" alt="#" class="weather-forecast-icon" />
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">8 º</div>
+              <div class="weather-forecast-temperature">4º</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Monday</div>
+            <img src="#" alt="#" class="weather-forecast-icon" />
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">8 º</div>
+              <div class="weather-forecast-temperature">4º</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Monday</div>
+            <img src="#" alt="#" class="weather-forecast-icon" />
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">8 º</div>
+              <div class="weather-forecast-temperature">4º</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Monday</div>
+            <img src="#" alt="#" class="weather-forecast-icon" />
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">8 º</div>
+              <div class="weather-forecast-temperature">4º</div>
+            </div>
           </div>
         </div>
-        <div class="weather-forecast-day">
-          <div class="weather-forecast-date">Monday</div>
-          <img src="#" alt="#" />
-          <div class="weather-forecast-temperatures">
-            <div class="weather-forecast-temperature">8 º</div>
-            <div class="weather-forecast-temperature">4º</div>
-          </div>
-        </div>
-        <div class="weather-forecast-day">
-          <div class="weather-forecast-date">Monday</div>
-          <img src="#" alt="#" />
-          <div class="weather-forecast-temperatures">
-            <div class="weather-forecast-temperature">8 º</div>
-            <div class="weather-forecast-temperature">4º</div>
-          </div>
-        </div>
-        <div class="weather-forecast-day">
-          <div class="weather-forecast-date">Monday</div>
-          <img src="#" alt="#" />
-          <div class="weather-forecast-temperatures">
-            <div class="weather-forecast-temperature">8 º</div>
-            <div class="weather-forecast-temperature">4º</div>
-          </div>
-        </div>
-        <div class="weather-forecast-day">
-          <div class="weather-forecast-date">Monday</div>
-          <img src="#" alt="#" />
-          <div class="weather-forecast-temperatures">
-            <div class="weather-forecast-temperature">8 º</div>
-            <div class="weather-forecast-temperature">4º</div>
-          </div>
-        </div>
-      </div>
-      <br />
+        <br />
+      </main>
       <hr />
       <footer>
-        This project was coded by <a href="https://github.com/evasousa23" target="_blank">Eva Sousa 💜 </a> is
-        open-sourced on <a href="https://github.com/evasousa23/my-super-weather-app" target="_blank">Github</a> and hosted on
-        <a href="https://incredible-weather-app.netlify.app/" target="_blank">Netlify</a>
+        This project was coded by
+        <a href="https://github.com/evasousa23" target="_blank"
+          >Eva Sousa 💜
+        </a>
+        is open-sourced on
+        <a
+          href="https://github.com/evasousa23/my-super-weather-app"
+          target="_blank"
+          >Github</a
+        >
+        and hosted on
+        <a href="https://incredible-weather-app.netlify.app/" target="_blank"
+          >Netlify</a
+        >
       </footer>
     </div>
   </body>
