--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             Humudity: <strong>33%</strong>
             <span>Wind: <strong>3.3 </strong>km/h</span>
           </div>
-          <div>City, <span>Country</span></div>
+          <div>📍 City, <span>Country</span></div>
           <div>Day, <span>hour</span></div>
         </div>
         <br />
@@ -44,7 +44,7 @@
             <div class="weather-forecast-date">Monday</div>
             <img src="#" alt="#" class="weather-forecast-icon" />
             <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">8 º</div>
+              <div class="weather-forecast-temperature">8º</div>
               <div class="weather-forecast-temperature">4º</div>
             </div>
           </div>
@@ -52,7 +52,7 @@
             <div class="weather-forecast-date">Monday</div>
             <img src="#" alt="#" class="weather-forecast-icon" />
             <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">8 º</div>
+              <div class="weather-forecast-temperature">8º</div>
               <div class="weather-forecast-temperature">4º</div>
             </div>
           </div>
@@ -60,7 +60,7 @@
             <div class="weather-forecast-date">Monday</div>
             <img src="#" alt="#" class="weather-forecast-icon" />
             <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">8 º</div>
+              <div class="weather-forecast-temperature">8º</div>
               <div class="weather-forecast-temperature">4º</div>
             </div>
           </div>
@@ -68,7 +68,7 @@
             <div class="weather-forecast-date">Monday</div>
             <img src="#" alt="#" class="weather-forecast-icon" />
             <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">8 º</div>
+              <div class="weather-forecast-temperature">8º</div>
               <div class="weather-forecast-temperature">4º</div>
             </div>
           </div>
@@ -76,7 +76,7 @@
             <div class="weather-forecast-date">Monday</div>
             <img src="#" alt="#" class="weather-forecast-icon" />
             <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">8 º</div>
+              <div class="weather-forecast-temperature">8º</div>
               <div class="weather-forecast-temperature">4º</div>
             </div>
           </div>
@@ -101,5 +101,7 @@
         >
       </footer>
     </div>
+
+    <script src="src/index.js"></script>
   </body>
 </html>
