add a function searchFormInput

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             placeholder="📌Enter a city..."
             required
             class="write-button"
+            id="search-input"
           />
           <input type="submit" value="search" class="search-botton" />
         </form>
@@ -35,7 +36,8 @@
             Humudity: <strong>33%</strong>
             <span>Wind: <strong>3.3 </strong>km/h</span>
           </div>
-          <div>📍 City, <span>Country</span></div>
+          <div class="city-country" id="city">City</div>
+
           <div>Day, <span>hour</span></div>
         </div>
         <br />
