--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <title>weather APP</title>
   </head>
   <body>
@@ -88,10 +89,8 @@
       <hr />
       <footer>
         This project was coded by
-        <a href="https://github.com/evasousa23" target="_blank"
-          >Eva Sousa 💜
-        </a>
-        is open-sourced on
+        <a href="https://github.com/evasousa23" target="_blank">Eva Sousa </a>
+        💜 is open-sourced on
         <a
           href="https://github.com/evasousa23/my-super-weather-app"
           target="_blank"
