create a response function
create an id (current-weather) and create the function updateWeatherData, to call the id

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <main>
         <img src="" alt="weather-image" class="weather-image" />
         <br />
-        <div class="current-weather">29°C</div>
+        <div class="current-weather" id="current-weather">29°C</div>
         <br />
         <div class="extra-info">
           <div>
