remove the css inside the class current-weather and weather-app-unit

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       <main>
         <img src="" alt="weather-image" class="weather-image" />
         <br />
-        <div class="current-weather" id="current-weather">29°C</div>
+        <div class="weather-app-temperature-container">
+        <div class="current-weather" id="current-weather"></div>
+        <div class="weatehr-app-unit">ºC</div>
+        </div>
         <br />
         <div class="extra-info">
           <div>
