add more java script

--- a/index.html
+++ b/index.html
@@ -30,17 +30,19 @@
       <main>
         <img src="" alt="weather-image" class="weather-image" />
         <br />
+
         <div class="weather-app-temperature-container">
-        <div class="current-weather" id="current-weather"></div>
-        <div class="weatehr-app-unit">ºC</div>
+          <div class="current-weather" id="current-weather"></div>
+          <div class="weatehr-app-unit">ºC</div>
         </div>
         <br />
         <div class="extra-info">
+          <div class="description" id="description"></div>
           <div>
-            Humudity: <strong>33%</strong>
+            Humudity: <strong id="humidity">33</strong>%
             <span>Wind: <strong>3.3 </strong>km/h</span>
           </div>
-          <div class="city-country" id="city">City</div>
+          <div class="city-country" id="city"></div>
 
           <div>Day, <span>hour</span></div>
         </div>
