created a function to display the date, time and minutes in real time

--- a/index.html
+++ b/index.html
@@ -39,12 +39,16 @@
         <div class="extra-info">
           <div class="description" id="description"></div>
           <div>
-            Humudity: <strong id="humidity">33</strong>%
-            <span>Wind: <strong>3.3 </strong>km/h</span>
+            Humudity: <strong id="humidity"></strong>%
+            <span>Wind: <strong id="wind"> </strong>km/h</span>
           </div>
-          <div class="city-country" id="city"></div>
-
-          <div>Day, <span>hour</span></div>
+          <div class="city-country">
+            📍
+            <div id="city"></div>
+            &#44; &#160;
+            <div id="country"></div>
+          </div>
+          <div class="day-hour" id="time"></div>
         </div>
         <br />
         <div class="weather-forecast">
