remove the img and created a div icon

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
         </form>
       </header>
       <main>
-        <img src="" alt="weather-image" class="weather-image" />
+        <div class="weather-image" id="icon"></div>
         <br />
-
         <div class="weather-app-temperature-container">
           <div class="current-weather" id="current-weather"></div>
           <div class="weatehr-app-unit">ºC</div>
