remove the img from the div(weather-forecast)

--- a/index.html
+++ b/index.html
@@ -50,42 +50,38 @@
           <div class="day-hour" id="time"></div>
         </div>
         <br />
-        <div class="weather-forecast">
+        <div class="weather-forecast" id="forecast">
           <div class="weather-forecast-day">
             <div class="weather-forecast-date">Monday</div>
-            <img src="#" alt="#" class="weather-forecast-icon" />
+            <div class="weather-forecast-icon">🌦️</div>
             <div class="weather-forecast-temperatures">
               <div class="weather-forecast-temperature">8º</div>
               <div class="weather-forecast-temperature">4º</div>
             </div>
-          </div>
-          <div class="weather-forecast-day">
+          </div><div class="weather-forecast-day">
             <div class="weather-forecast-date">Monday</div>
-            <img src="#" alt="#" class="weather-forecast-icon" />
+            <div class="weather-forecast-icon">🌦️</div>
             <div class="weather-forecast-temperatures">
               <div class="weather-forecast-temperature">8º</div>
               <div class="weather-forecast-temperature">4º</div>
             </div>
-          </div>
-          <div class="weather-forecast-day">
+          </div><div class="weather-forecast-day">
             <div class="weather-forecast-date">Monday</div>
-            <img src="#" alt="#" class="weather-forecast-icon" />
+            <div class="weather-forecast-icon">🌦️</div>
             <div class="weather-forecast-temperatures">
               <div class="weather-forecast-temperature">8º</div>
               <div class="weather-forecast-temperature">4º</div>
             </div>
-          </div>
-          <div class="weather-forecast-day">
+          </div><div class="weather-forecast-day">
             <div class="weather-forecast-date">Monday</div>
-            <img src="#" alt="#" class="weather-forecast-icon" />
+            <div class="weather-forecast-icon">🌦️</div>
             <div class="weather-forecast-temperatures">
               <div class="weather-forecast-temperature">8º</div>
               <div class="weather-forecast-temperature">4º</div>
             </div>
-          </div>
-          <div class="weather-forecast-day">
+          </div><div class="weather-forecast-day">
             <div class="weather-forecast-date">Monday</div>
-            <img src="#" alt="#" class="weather-forecast-icon" />
+            <div class="weather-forecast-icon">🌦️</div>
             <div class="weather-forecast-temperatures">
               <div class="weather-forecast-temperature">8º</div>
               <div class="weather-forecast-temperature">4º</div>
