remove html file and insert in js
in js call the function (display the forecast) and create a sting call forecastHtml

--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
         <div class="extra-info">
           <div class="description" id="description"></div>
           <div>
-            Humudity: <strong id="humidity"></strong>%
-            <span>Wind: <strong id="wind"> </strong>km/h</span>
+            Humudity: <strong class="humidity-wind" id="humidity"></strong>%
+            <span
+              >Wind:
+              <strong class="humidity-wind" id="wind"> </strong>km/h</span
+            >
           </div>
           <div class="city-country">
             📍
@@ -50,44 +53,7 @@
           <div class="day-hour" id="time"></div>
         </div>
         <br />
-        <div class="weather-forecast" id="forecast">
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Monday</div>
-            <div class="weather-forecast-icon">🌦️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">8º</div>
-              <div class="weather-forecast-temperature">4º</div>
-            </div>
-          </div><div class="weather-forecast-day">
-            <div class="weather-forecast-date">Monday</div>
-            <div class="weather-forecast-icon">🌦️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">8º</div>
-              <div class="weather-forecast-temperature">4º</div>
-            </div>
-          </div><div class="weather-forecast-day">
-            <div class="weather-forecast-date">Monday</div>
-            <div class="weather-forecast-icon">🌦️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">8º</div>
-              <div class="weather-forecast-temperature">4º</div>
-            </div>
-          </div><div class="weather-forecast-day">
-            <div class="weather-forecast-date">Monday</div>
-            <div class="weather-forecast-icon">🌦️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">8º</div>
-              <div class="weather-forecast-temperature">4º</div>
-            </div>
-          </div><div class="weather-forecast-day">
-            <div class="weather-forecast-date">Monday</div>
-            <div class="weather-forecast-icon">🌦️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">8º</div>
-              <div class="weather-forecast-temperature">4º</div>
-            </div>
-          </div>
-        </div>
+       <div class="weather-forecast" id="forecast"></div>
         <br />
       </main>
       <hr />
